# VERSE-OS

./: .gitignore  BOUNDED_ACTIVE_TCB_FAILOVER_TLA_EVIDENCE.md  BUILD_STATUS.md  CAPDL_INTEGRATION.md  CHAT_RECOVERY_NOTES.md  CLAIM_AUDIT.md  CODEXFS_MODEL_LINEAGE.md  CODEXFS_RUNTIME_XOR_EVIDENCE.md  CODEXFS_STATUS.md  CodexFS_Final.tla  CodexFS_Monotonic_v18.tla  CodexFS_Monotonic_v19_5.cfg  DHARMA_RECOVERY_OK_EVIDENCE.md  DOCKER_RECOVERY_MANIFEST.md  FAULT_ENDPOINT_LIMITATION_EVIDENCE.md  FORMAL_METHODS_REPORT.md  MNEMOSYNE_RECONCILIATION.md  NATIVE_SEL4_TCB_SETUP.md  NEGATIVE_BAD_FAULT_ENDPOINT_EVIDENCE.md  NEGATIVE_EXHAUSTED_SPARE_POOL_EVIDENCE.md  NEGATIVE_MISSING_METADATA_EVIDENCE.md  NEGATIVE_NORMAL_RECOVERY_NO_SECOND_RESTART_EVIDENCE.md  NEGATIVE_OCCUPIED_SPARE_SLOT_EVIDENCE.md  NEGATIVE_TESTS_ISSUE4_REVERIFICATION_EVIDENCE.md  NORMAL_RECOVERY_PASS_EXIT_EVIDENCE.md  README.md  RECOVERY_MANIFEST.md  RECOVERY_TLA_FIXED_EVIDENCE.md  RUNTIME_RECOVERY_EVIDENCE.md  RWX_KERNEL_LOAD_SEGMENT_EVIDENCE.md  SUPPORT_STATUS.md  TCB_BOUNDED_QUARANTINE_LIFECYCLE_EVIDENCE.md  TCB_CRITIC_CLEANUP_AUDIT.md  TCB_ENFORCED_BUILD_FLAG_EVIDENCE.md  TCB_ENFORCED_COMPILE_PROBE.md  TCB_HANDOFF_CAPDL_AUDIT.md  TCB_HANDOFF_IMAGE_BUILD_EVIDENCE.md  TCB_HANDOFF_INJECTION_EVIDENCE.md  TCB_HANDOFF_PARSE_EVIDENCE.md  TCB_NORMAL_RECOVERY_NO_FAULT_EVIDENCE.md  (+18 more)
docker_recovered/044ce8e5bbc9/home_king/: .bashrc
docker_recovered/044ce8e5bbc9/verse_unified/: CMakeLists.txt
docker_recovered/044ce8e5bbc9/verse_unified/components/DharmaNet/: CMakeLists.txt
docker_recovered/044ce8e5bbc9/verse_unified/components/LogRing/: LogRing.camkes
docker_recovered/044ce8e5bbc9/verse_unified/components/WorkerA/src/: workera.c
docker_recovered/044ce8e5bbc9/verse_unified/components/WriteClient/: CMakeLists.txt
docker_recovered/044ce8e5bbc9/verse_unified/components/WriteClient/src/: writeclient.c
docker_recovered/8a11c759c7e5/home_king/: .isabelle
persistent_watchdog/components/ProcMan/: ProcMan.camkes
src/apps/codexfs_demo/: CMakeLists.txt  codexfs_demo.camkes
src/apps/cortexmm_demo/: CMakeLists.txt  cortexmm_demo.camkes
src/apps/cortexmm_demo/components/CortexMM/src/: cortexmm.c
src/apps/dharmanet_severity/: CMakeLists.txt  dharmanet_severity.camkes
src/apps/dharmanet_severity/components/DharmaNet/: DharmaNet.camkes
src/apps/dharmanet_severity/components/DharmaNet/src/: dharmanet.c
src/apps/dharmanet_severity/components/WorkerB/src/: workerb.c
src/apps/persistent_watchdog/: CMakeLists.txt  persistent_watchdog.camkes
src/apps/persistent_watchdog/components/ProcMan/src/: procman.c
src/apps/persistent_watchdog/components/Watchdog/: CMakeLists.txt
src/apps/sentinel_negtest/: CMakeLists.txt  sentinel_negtest.camkes
src/apps/sentinel_negtest/components/Hello/: Hello.camkes
src/apps/sentinel_negtest/components/Hello/src/: hello.c
src/apps/sentinel_negtest/components/PublicClient/: CMakeLists.txt  PublicClient.camkes
src/apps/sentinel_negtest/components/PublicClient/src/: public_client.c
src/apps/sentinel_negtest/components/SecretClient/: CMakeLists.txt  SecretClient.camkes
src/apps/sentinel_negtest/components/SecretClient/src/: secret_client.c
src/apps/sentinel_negtest/components/Sentinel/: Sentinel.camkes
src/apps/sentinel_negtest/components/Sentinel/src/: sentinel.c
src/apps/verse_unified/: CMakeLists.txt  verse_unified.camkes
src/apps/verse_unified/components/CodexFS/: CMakeLists.txt  CodexFS.camkes
src/apps/verse_unified/components/DharmaNet/: DharmaNet.camkes
src/apps/verse_unified/components/DharmaNet/src/: dharmanet.c
src/apps/verse_unified/components/Hello/: Hello.camkes
src/apps/verse_unified/components/LogRing/src/: logring.c
src/apps/verse_unified/components/ProcMan/src/: procman.c
src/apps/verse_unified/components/TestWorker/src/: testworker.c
src/apps/verse_unified/components/Watchdog/: Watchdog.camkes
src/apps/verse_unified/components/Watchdog/src/: watchdog.c
src/apps/verse_unified/components/WorkerA/src/: workera.c
src/apps/verse_unified/interfaces/: Hello.idl4  Memory.idl4
src/apps/watchdog_tcb/: CMakeLists.txt  watchdog_tcb.camkes
src/capdl/: verse_tcb_handoff.cdl
src/specs/: Bounded_Active_TCB_Failover.tla  Bounded_Active_TCB_Failover_exhausted.cfg  Bounded_Active_TCB_Failover_normal.cfg  CodexFS_Monotonic_v12.tla  CodexFS_Runtime_XOR.tla  CodexFS_Runtime_XOR_deadlock.cfg  CodexFS_Runtime_XOR_goodchain.cfg  CodexFS_Runtime_XOR_type.cfg  CortexMM_Capability.cfg  CortexMM_Capability.tla  DharmaNet_Budget.cfg  DharmaNet_Budget.tla  Recovery_TCB.tla  Recovery_TCB_deadlock.cfg  Recovery_TCB_liveness.cfg  Recovery_TCB_refinement.cfg  Recovery_TCB_type.cfg  Recovery_Task.cfg  Recovery_Task.tla  Recovery_Task_deadlock.cfg  Recovery_Task_liveness.cfg  Recovery_Task_type.cfg  Sentinel_Lattice.cfg  Sentinel_Lattice.tla
src/specs/codexfs_monotonic_recovered/: CodexFS_Monotonic_v1.cfg  CodexFS_Monotonic_v1.tla  CodexFS_Monotonic_v10.tla  CodexFS_Monotonic_v11.tla  CodexFS_Monotonic_v13.tla  CodexFS_Monotonic_v14.tla  CodexFS_Monotonic_v15.tla  CodexFS_Monotonic_v16.tla  CodexFS_Monotonic_v17.cfg  CodexFS_Monotonic_v17.tla  CodexFS_Monotonic_v18.cfg  CodexFS_Monotonic_v19.cfg  CodexFS_Monotonic_v19.tla  CodexFS_Monotonic_v19_5.tla  CodexFS_Monotonic_v2.tla  CodexFS_Monotonic_v20.tla  CodexFS_Monotonic_v3.tla  CodexFS_Monotonic_v4.tla  CodexFS_Monotonic_v5.tla  CodexFS_Monotonic_v6.tla  CodexFS_Monotonic_v7.tla  CodexFS_Monotonic_v8.tla  CodexFS_Monotonic_v9.tla  README.md
src/tools/: audit_caps.py
tools/: capability_audit.py  chaos_monkey.py  check_tcb_handoff.py  extract_testworker_metadata.sh  inject_tcb_handoff.py  negative_bad_fault_endpoint.sh  negative_exhausted_spare_pool.sh  negative_fault_endpoint_decode.sh  negative_missing_metadata.sh  negative_normal_recovery_no_second_restart.sh  negative_occupied_spare_slot.sh
verification_run_20260502_190859/: summary.txt
verse_unified/: CMakeLists.txt
verse_unified/components/Hello/: CMakeLists.txt
verse_unified/components/MemClient/: CMakeLists.txt
(+41 files in other folders)
