cmake_minimum_required(VERSION 3.16.0)
project(verse_unified C)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/LogRing)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/Sentinel)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/Hello)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/Client)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/CortexMM)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/MemClient)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/WorkerA)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/WorkerB)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/DharmaNet)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/CodexFS)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/WriteClient)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/ReadClient)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/TestWorker)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/Watchdog)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/ProcMan)
DeclareCAmkESRootserver(verse_unified.camkes)
