cmake_minimum_required(VERSION 3.16.0)
project(verse_unified C)

option(VERSE_TCB_ENFORCED "Enable guarded ProcMan native seL4 TCB restart path" OFF)
option(VERSE_TESTWORKER_REPEAT_DEADLOCK "Enable repeated TestWorker deadlock fault injection after recovery" OFF)

if(VERSE_TCB_ENFORCED)
    add_compile_definitions(VERSE_TCB_ENFORCED)
    add_compile_definitions(VERSE_WORKER_TCB_CPTR=0x100)
    add_compile_definitions(VERSE_WORKER_FAULT_EP_CPTR=0x101)
    add_compile_definitions(VERSE_PROCMAN_CNODE_CPTR=0x102)
    add_compile_definitions(VERSE_WORKER_TCB_UNTYPED_CPTR=0x103)
    add_compile_definitions(VERSE_FRESH_WORKER_TCB_CPTR=0x104)
    add_compile_definitions(VERSE_SPARE_WORKER_TCB_1_CPTR=0x104)
    add_compile_definitions(VERSE_SPARE_WORKER_TCB_2_CPTR=0x109)
    add_compile_definitions(VERSE_SPARE_WORKER_TCB_3_CPTR=0x10a)
    add_compile_definitions(VERSE_WORKER_CSPACE_CPTR=0x105)
    add_compile_definitions(VERSE_WORKER_VSPACE_CPTR=0x106)
    add_compile_definitions(VERSE_WORKER_IPC_BUFFER_CPTR=0x107)
    add_compile_definitions(VERSE_WORKER_CONFIGURE_FAULT_EP_CPTR=0x108)
    add_compile_definitions(VERSE_WORKER_IPC_BUFFER_ADDR=0x53c000)
    add_compile_definitions(VERSE_WORKER_ENTRY_IP=0x401116)
    add_compile_definitions(VERSE_WORKER_STACK_TOP=0x53a000)
    add_compile_definitions(VERSE_WORKER_PRIORITY=254)
    add_compile_definitions(VERSE_WORKER_MAX_PRIORITY=254)
endif()

if(VERSE_TESTWORKER_REPEAT_DEADLOCK)
    add_compile_definitions(VERSE_TESTWORKER_REPEAT_DEADLOCK)
endif()

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/LogRing)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/Sentinel)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/Hello)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/Client)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/CortexMM)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/MemClient)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/WorkerA)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/WorkerB)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/DharmaNet)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/CodexFS)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/WriteClient)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/ReadClient)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/TestWorker)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/Watchdog)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/components/ProcMan)
DeclareCAmkESRootserver(verse_unified.camkes)
